// Copyright 2017 The Fuchsia Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cobalt;

option go_package = "shuffler";

import "encrypted_message.proto";

// Serialized ObservationVals are used as the values for the ObservationTable
// in Shuffler data store.
message ObservationVal {
  // The id uniquely represents this |ObservationVal| in the data store.
  string id = 1;

  // |arrival_day_index| is used to store the day on which the observation
  // arrived at the Shuffler for the purpose of tracking the age of the
  // observation. The |arrival_day_index| is the number of days since day zero
  // of the Unix epoch, January 1, 1970, at the arrival time, in the UTC time
  // zone.
  uint32 arrival_day_index = 2;

  // Each EncryptedMessage contains the ciphertext of an Observation that has
  // been encrypted to the public key of the Analyzer by the Encoder.
  EncryptedMessage encrypted_observation = 3;


}
